2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/AcousticMassSourceRate.md
# `AcousticMassSourceRate`

<a id="ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticMassSourceRate"></a>

#### *class* Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticMassSourceRate

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Defines a AcousticMassSourceRate.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Methods

| Name | Description |
|------------------------------------------------------------------------------|-----------------------------------------------------------------------------------|
| [`Activate`](#AcousticMassSourceRate.Activate)                               | Activate the current object.                                                      |
| [`AddComment`](#AcousticMassSourceRate.AddComment)                           | Creates a new child Comment.                                                      |
| [`AddFigure`](#AcousticMassSourceRate.AddFigure)                             | Creates a new child Figure.                                                       |
| [`AddImage`](#AcousticMassSourceRate.AddImage)                               | Creates a new child Image.                                                        |
| [`CopyTo`](#AcousticMassSourceRate.CopyTo)                                   | Copies all visible properties from this object to another.                        |
| [`CreateParameter`](#AcousticMassSourceRate.CreateParameter)                 | Creates a new parameter for a Property.                                           |
| [`Delete`](#AcousticMassSourceRate.Delete)                                   | Run the Delete action.                                                            |
| [`Duplicate`](#AcousticMassSourceRate.Duplicate)                             | Creates a copy of the current DataModelObject.                                    |
| [`GetChildren`](#AcousticMassSourceRate.GetChildren)                         | Gets the list of children, filtered by type.                                      |
| [`GetParameter`](#AcousticMassSourceRate.GetParameter)                       | Gets the parameter corresponding to the given property.                           |
| [`GroupAllSimilarChildren`](#AcousticMassSourceRate.GroupAllSimilarChildren) | Run the GroupAllSimilarChildren action.                                           |
| [`GroupSimilarObjects`](#AcousticMassSourceRate.GroupSimilarObjects)         | Run the GroupSimilarObjects action.                                               |
| [`PromoteToNamedSelection`](#AcousticMassSourceRate.PromoteToNamedSelection) | Run the PromoteToNamedSelection action.                                           |
| [`PropertyByAPIName`](#AcousticMassSourceRate.PropertyByAPIName)             | Get a property by its API name.                                                   |
| [`PropertyByName`](#AcousticMassSourceRate.PropertyByName)                   | Get a property by its unique name.                                                |
| [`RemoveParameter`](#AcousticMassSourceRate.RemoveParameter)                 | Removes the parameter from the parameter set corresponding to the given property. |

### Properties

| Name | Description |
|------------------------------------------------------------------------------|---------------------------------------------------------------|
| [`Children`](#AcousticMassSourceRate.Children)                               | Gets the list of children.                                    |
| [`Comments`](#AcousticMassSourceRate.Comments)                               | Gets the list of associated comments.                         |
| [`DataModelObjectCategory`](#AcousticMassSourceRate.DataModelObjectCategory) | Gets the current DataModelObject’s category.                  |
| [`Figures`](#AcousticMassSourceRate.Figures)                                 | Gets the list of associated figures.                          |
| [`Images`](#AcousticMassSourceRate.Images)                                   | Gets the list of associated images.                           |
| [`InternalObject`](#AcousticMassSourceRate.InternalObject)                   | Gets the internal object. For advanced usage only.            |
| [`Location`](#AcousticMassSourceRate.Location)                               | Gets or sets the Location.                                    |
| [`Magnitude`](#AcousticMassSourceRate.Magnitude)                             | Gets or sets the Magnitude.                                   |
| [`Properties`](#AcousticMassSourceRate.Properties)                           | Gets the list of properties for this object.                  |
| [`ReadOnly`](#AcousticMassSourceRate.ReadOnly)                               | Gets or sets the ReadOnly.                                    |
| [`SharedRefBody`](#AcousticMassSourceRate.SharedRefBody)                     | Gets or sets the SharedRefBody.                               |
| [`Suppressed`](#AcousticMassSourceRate.Suppressed)                           | Gets or sets the Suppressed.                                  |
| [`VisibleProperties`](#AcousticMassSourceRate.VisibleProperties)             | Gets the list of properties that are visible for this object. |

<a id="property-detail"></a>

## Property detail

<a id="AcousticMassSourceRate.Children"></a>

### *property* AcousticMassSourceRate.Children *: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of children.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Comments"></a>

### *property* AcousticMassSourceRate.Comments *: Iterable[[Ansys.ACT.Automation.Mechanical.Comment](../Comment.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Comment)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated comments.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.DataModelObjectCategory"></a>

### *property* AcousticMassSourceRate.DataModelObjectCategory *: [Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory](../../../../Mechanical/DataModel/Enums/DataModelObjectCategory.md#ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the current DataModelObject’s category.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Figures"></a>

### *property* AcousticMassSourceRate.Figures *: Iterable[[Ansys.ACT.Automation.Mechanical.Figure](../Figure.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Figure)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated figures.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Images"></a>

### *property* AcousticMassSourceRate.Images *: Iterable[[Ansys.ACT.Automation.Mechanical.Image](../Image.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Image)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of associated images.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.InternalObject"></a>

### *property* AcousticMassSourceRate.InternalObject *: Ansys.Common.Interop.DSObjectsAuto.IDSLoadAuto | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the internal object. For advanced usage only.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Location"></a>

### *property* AcousticMassSourceRate.Location *: Ansys.ACT.Interfaces.Common.ISelectionInfo | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Location.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Magnitude"></a>

### *property* AcousticMassSourceRate.Magnitude *: [Ansys.ACT.Mechanical.Fields.Field](../../../Mechanical/Fields/Field.md#ansys.mechanical.stubs.v241.Ansys.ACT.Mechanical.Fields.Field) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Magnitude.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Properties"></a>

### *property* AcousticMassSourceRate.Properties *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Ansys.ACT.Automation.Mechanical.Property] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of properties for this object.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.ReadOnly"></a>

### *property* AcousticMassSourceRate.ReadOnly *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the ReadOnly.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.SharedRefBody"></a>

### *property* AcousticMassSourceRate.SharedRefBody *: [Ansys.ACT.Automation.Mechanical.Body](../Body.md#ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Body) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the SharedRefBody.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Suppressed"></a>

### *property* AcousticMassSourceRate.Suppressed *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets or sets the Suppressed.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.VisibleProperties"></a>

### *property* AcousticMassSourceRate.VisibleProperties *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[Ansys.ACT.Automation.Mechanical.Property] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the list of properties that are visible for this object.

<!-- !! processed by numpydoc !! -->

<a id="method-detail"></a>

## Method detail

<a id="AcousticMassSourceRate.Activate"></a>

### AcousticMassSourceRate.Activate()

Activate the current object.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.AddComment"></a>

### AcousticMassSourceRate.AddComment()

Creates a new child Comment.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.AddFigure"></a>

### AcousticMassSourceRate.AddFigure()

Creates a new child Figure.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.AddImage"></a>

### AcousticMassSourceRate.AddImage(filePath: [str](https://docs.python.org/3/library/stdtypes.html#str))

```text
Creates a new child Image.
If a filePath is provided, the image will be loaded from that file,
if not, the image will be a screen capture of the Geometry window.
```

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.CopyTo"></a>

### AcousticMassSourceRate.CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject)

Copies all visible properties from this object to another.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.CreateParameter"></a>

### AcousticMassSourceRate.CreateParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Creates a new parameter for a Property.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Delete"></a>

### AcousticMassSourceRate.Delete()

Run the Delete action.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.Duplicate"></a>

### AcousticMassSourceRate.Duplicate()

Creates a copy of the current DataModelObject.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.GetChildren"></a>

### AcousticMassSourceRate.GetChildren(recurses: [bool](https://docs.python.org/3/library/functions.html#bool), children: List[ChildrenType])

Gets the list of children, filtered by type.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.GetParameter"></a>

### AcousticMassSourceRate.GetParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Gets the parameter corresponding to the given property.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.GroupAllSimilarChildren"></a>

### AcousticMassSourceRate.GroupAllSimilarChildren()

Run the GroupAllSimilarChildren action.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.GroupSimilarObjects"></a>

### AcousticMassSourceRate.GroupSimilarObjects()

Run the GroupSimilarObjects action.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.PromoteToNamedSelection"></a>

### AcousticMassSourceRate.PromoteToNamedSelection()

Run the PromoteToNamedSelection action.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.PropertyByAPIName"></a>

### AcousticMassSourceRate.PropertyByAPIName(name: [str](https://docs.python.org/3/library/stdtypes.html#str))

```text
Get a property by its API name.
If multiple properties have the same API Name, only the first property with that name will be returned.
```

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.PropertyByName"></a>

### AcousticMassSourceRate.PropertyByName(name: [str](https://docs.python.org/3/library/stdtypes.html#str))

Get a property by its unique name.

<!-- !! processed by numpydoc !! -->

<a id="AcousticMassSourceRate.RemoveParameter"></a>

### AcousticMassSourceRate.RemoveParameter(propName: [str](https://docs.python.org/3/library/stdtypes.html#str))

Removes the parameter from the parameter set corresponding to the given property.

<!-- !! processed by numpydoc !! -->

